WP-7911 Fixed the Spacing between the drop downs

--- a/sass/conditionals/exec-ed/ee-program-finder.sass
+++ b/sass/conditionals/exec-ed/ee-program-finder.sass
@@ -1353,3 +1353,9 @@ h2.isotopify-title
   max-width: 270px
 .pane-filters .execed-date-range-width button.isotopify-filter-daterange-button
   width: 270px
+
+// Program finder changes in only exec-ed/programs and not in programs
+.page-node-417671 .panels-layout-gsb-program-finder .featured-content .panel-pane
+  padding-right: 0px
+.page-node-417671 .pane-filters .form-item-filter-program-topic
+  max-width: 270px
